--- a/scss/all.scss
+++ b/scss/all.scss
@@ -1,3 +1,5 @@
 
-@import '../node_modules/bootstrap/scss/bootstrap-flex.scss'
+@import '../node_modules/bootstrap/scss/bootstrap-flex.scss';
 
+@import 'app/index';
+@import 'navbar/index';
