--- a/scss/navbar/index.scss
+++ b/scss/navbar/index.scss
@@ -1,8 +1,11 @@
-
 header.navbar-fixed-top {
   .navbar-toggler {
     position: absolute;
     left: 0.5rem;
     top: 0.5rem;
+
+    &.v-link-active-exact {
+      display: none;
+    }
   }
 }
