--- a/public/css/all.css
+++ b/public/css/all.css
@@ -4746,4 +4746,8 @@ header.navbar-fixed-top .navbar-toggler {
     display: none; }
 
 .card-img-bottom {
+  display: block;
   width: 100%; }
+  .card-img-bottom img {
+    display: block;
+    width: 100%; }
