Cropper tweaks for mobile
Signed-off-by: Tim Smart <tim.smart@arisechurch.com>

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -5019,3 +5019,7 @@ header.navbar-fixed-top .navbar-toggler {
   .card-img-bottom img {
     display: block;
     width: 100%; }
+
+.img-responsive {
+  height: auto;
+  width: 100%; }
